--- a/css/controls.css
+++ b/css/controls.css
@@ -8,6 +8,7 @@
 
 .custom-image-button {
     display: flex;
+    background-color: #afa6a6;
     flex-direction: column;
     flex-wrap: wrap;
     justify-content: flex-start;
@@ -37,9 +38,9 @@
     text-decoration: none;
     display: block;
     box-sizing: border-box;
-    color: white;
-    border: 1px solid #7d7d7d;
-    background-color: #7d7d7d;
+    color: #fff;
+    border: 1px solid #4287f5;
+    background-color: #afa6a6;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -49,13 +50,13 @@
 }
 
 .custom-button:not(:disabled):hover {
-    background-color: #4d4d4d;
-    border-color: #4d4d4d;
+    background-color: #4287f5;
+    border-color: #4287f5;
 }
 
 .custom-button:not(:disabled):active {
-    background-color: #4d4d4d;
-    border-color: #4d4d4d;
+    background-color: #afa6a6;
+    border-color: #4287f5;
 }
 
 .custom-button:disabled {
@@ -64,18 +65,18 @@
 }
 
 .custom-button-primary {
-    background-color: #007bff;
-    border-color: #007bff;
+    background-color: #afa6a6;
+    border-color: #4287f5;
 }
 
 .custom-button-primary:not(:disabled):hover {
-    background-color: #005cbf;
-    border-color: #005cbf;
+    background-color: #4287f5;
+    border-color: #4287f5;
 }
 
 .custom-button-primary:not(:disabled):active {
-    background-color: #005cbf;
-    border-color: #005cbf;
+    background-color: #7d7d7d;
+    border-color: #4287f5;
 }
 
 .custom-button-danger {
@@ -84,7 +85,7 @@
 }
 
 .custom-button-danger:not(:disabled):hover {
-    background-color: #a71120;
+    background-color: #63030d;
     border-color: #a71120;
 }
 
@@ -94,18 +95,18 @@
 }
 
 .custom-button-info {
-    background-color: #17a2b8;
-    border-color: #17a2b8;
+    background-color: #afa6a6;
+    border-color: #4287f5;
 }
 
 .custom-button-info:not(:disabled):hover {
-    background-color: #007082;
-    border-color: #007082;
+    background-color: #4287f5;
+    border-color: #4287f5;
 }
 
 .custom-button-info:not(:disabled):active {
-    background-color: #007082;
-    border-color: #007082;
+    background-color: #afa6a6;
+    border-color: #4287f5;
 }
 
 .custom-button-flat {
@@ -119,9 +120,9 @@
     box-shadow: none;
     transition: background-color 0.1s, box-shadow 0.1s, border 0.1s;
     text-decoration: none;
-    color: black;
-    border: 1px solid #777777;
-    background-color: white;
+    color: #fff;
+    border: 1px solid #4287f5;
+    background-color: #afa6a6;
     padding: 13px;
     display: flex;
     flex-direction: row;
@@ -181,9 +182,10 @@ textarea.custom-textbox {
     font-family: 'Roboto';
     box-sizing: border-box;
     padding: 5px 10px;
-    background: rgb(255, 255, 255);
-    border: 1px solid #7d7d7d;
-    font-size: 16px;
+    color: #fff;
+    background: #404040;
+    border: 1px solid #4287f5;
+    font-size: 12px;
     outline: none;
     border-radius: 2px;
     resize: vertical;
@@ -202,7 +204,7 @@ textarea.custom-textbox {
 input[readonly].custom-textbox,
 textarea[readonly].custom-textbox {
     cursor: default;
-    background: rgb(230, 230, 230);
+    background: #404040;
 }
 
 .control-group {
@@ -327,13 +329,13 @@ textarea[readonly].custom-textbox {
 }
 
 .pulse-primary {
-    box-shadow: 0 0 0 rgba(0, 123, 255, 0.5);
+    box-shadow: 0 0 0 rgba(52, 146, 247, 0.5);
     animation: pulse-primary 2s infinite;
 }
 
 @-webkit-keyframes pulse-primary {
     0% {
-        -webkit-box-shadow: 0 0 0 0 rgba(0, 123, 255, 0.5);
+        -webkit-box-shadow: 0 0 0 0 rgba(72, 157, 247, 0.5);
     }
     70% {
         -webkit-box-shadow: 0 0 0 15px rgba(0, 123, 255, 0);
@@ -345,8 +347,8 @@ textarea[readonly].custom-textbox {
 
 @keyframes pulse-primary {
     0% {
-        -moz-box-shadow: 0 0 0 0 rgba(0, 123, 255, 0.5);
-        box-shadow: 0 0 0 0 rgba(0, 123, 255, 0.5);
+        -moz-box-shadow: 0 0 0 0 rgba(72, 157, 247, 0.5);
+        box-shadow: 0 0 0 0 rgba(72, 157, 247, 0.5);
     }
     70% {
         -moz-box-shadow: 0 0 0 15px rgba(0, 123, 255, 0);
@@ -391,13 +393,13 @@ textarea[readonly].custom-textbox {
 }
 
 .pulse-info {
-    box-shadow: 0 0 0 rgba(23, 162, 184, 0.5);
+    box-shadow: 0 0 0 rgba(72, 157, 247, 0.5);
     animation: pulse-info 2s infinite;
 }
 
 @-webkit-keyframes pulse-info {
     0% {
-        -webkit-box-shadow: 0 0 0 0 rgba(23, 162, 184, 0.5);
+        -webkit-box-shadow: 0 0 0 0 rgba(72, 157, 247, 0.5);
     }
     70% {
         -webkit-box-shadow: 0 0 0 15px rgba(23, 162, 184, 0);
@@ -409,7 +411,7 @@ textarea[readonly].custom-textbox {
 
 @keyframes pulse-info {
     0% {
-        -moz-box-shadow: 0 0 0 0 rgba(23, 162, 184, 0.5);
+        -moz-box-shadow: 0 0 0 0 rgba(72, 157, 247, 0.5);
         box-shadow: 0 0 0 0 rgba(23, 162, 184, 0.5);
     }
     70% {
