--- a/css/frame.css
+++ b/css/frame.css
@@ -1,10 +1,4 @@
-/*************************************************************************
- * GitHub: https://github.com/yenchiah/project-website-template
- * Version: v3.41
- * This CSS file is for the website frame
- * If you want to keep this template updated, avoid modifying this file
- * Instead, add your own CSS in the custom.css file
- *************************************************************************/
+﻿
 
 html,
 body {
