--- a/css/controls.css
+++ b/css/controls.css
@@ -1,11 +1,4 @@
-/*************************************************************************
- * GitHub: https://github.com/yenchiah/project-website-template
- * Version: v3.41
- * This CSS file has control elements that do not require JavaScript
- * If you want to keep this template updated, avoid modifying this file
- * Instead, add your own CSS in the custom.css file
- *************************************************************************/
-
+﻿
 .custom-image-button {
     display: flex;
     background-color: #afa6a6;
