--- a/css/widgets.css
+++ b/css/widgets.css
@@ -1,11 +1,4 @@
-/*************************************************************************
- * GitHub: https://github.com/yenchiah/project-website-template
- * Version: v3.41
- * This CSS file has widgets for building interactive web applications
- * Use this file with widgets.js
- * If you want to keep this template updated, avoid modifying this file
- * Instead, add your own CSS in the custom.css file
- *************************************************************************/
+﻿
 
 .painting-frame {
     margin: 15px 0;
