--- a/css/widgets.css
+++ b/css/widgets.css
@@ -1,18 +1,43 @@
-﻿/***************************************************************************************************************************************
-* Copyright 2023 Terry D. Eppler
+﻿/**************************************************************************************************
+*     File Name:               widgets.css
+*     Assembly:                Budget Execution
+*     Author:                  Terry D. Eppler
+*     Created:                 03-24-2023
+* 
+*     Last Modified By:        Terry D. Eppler
+*     Last Modified On:        05-31-2023
 *
-* Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files 
-* (the “Software”), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, 
-* publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, 
-* subject to the following conditions: The above copyright notice and this permission notice shall be included in all copies 
-* or substantial portions of the Software.
-*
-* THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO 
-* THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
-* COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
-* ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
-*
-***************************************************************************************************************************************/
+* <copyright file="widgets.css" company="Terry Eppler">
+*    This is a Federal Budget, Finance, and Accounting application for the
+*    US Environmental Protection Agency (US EPA).
+*    Copyright ©  2023  Terry Eppler
+* 
+*    Permission is hereby granted, free of charge, to any person obtaining a copy
+*    of this software and associated documentation files (the “Software”),
+*    to deal in the Software without restriction,
+*    including without limitation the rights to use,
+*    copy, modify, merge, publish, distribute, sublicense,
+*    and/or sell copies of the Software,
+*    and to permit persons to whom the Software is furnished to do so,
+*    subject to the following conditions:
+* 
+*    The above copyright notice and this permission notice shall be included in all
+*    copies or substantial portions of the Software.
+* 
+*    THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
+*    INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+*    FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT.
+*    IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM,
+*    DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
+*    ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
+*    DEALINGS IN THE SOFTWARE.
+* 
+*    You can contact me at: terryeppler@gmail.com or eppler.terry@epa.gov
+* </copyright>
+* <summary>
+*   widgets.css
+* </summary>
+**************************************************************************************************/
 .painting-frame
 {
     -khtml-user-select: none;
@@ -37,7 +62,8 @@
 {
     border: 8px solid white;
     border-radius: 0;
-    box-shadow: 0 0px 4px rgba( 0, 0, 0, 0.32 ), 0 0px 10px rgba( 0, 0, 0, 0.23 );
+    box-shadow: 0 0 4px #000000, 0 0 10px #000000;
+    box-shadow: 0 0 4px rgba( 0, 0, 0, 0.32 ), 0 0 10px rgba( 0, 0, 0, 0.23 );
     box-sizing: border-box;
     display: table-cell;
     height: auto;
@@ -103,7 +129,7 @@
 {
     fill: #767676;
     height: 24px;
-    padding: 8px 0px 8px 10px;
+    padding: 8px 0 8px 10px;
     width: 24px;
 }
 
@@ -165,7 +191,7 @@
     border: none;
     cursor: pointer;
     float: left;
-    font-family: 'Open Sans', Helvetica, Arial, sans-serif;
+    font-family: 'Roboto';
     font-size: 17px;
     outline: none;
     padding: 14px 16px;
@@ -174,7 +200,7 @@
 
 .custom-tab .custom-tab-menu-item:hover
 {
-    background-color: #ddd;
+    background-color:  #005cbf;
 }
 
 .custom-tab .custom-tab-menu-item.active
@@ -186,7 +212,7 @@
 {
     align-content: stretch;
     align-items: stretch;
-    border: 1px solid #4287f5;
+    border: 1px solid #6CA1F7;
     box-sizing: border-box;
     display: none;
     flex-direction: column;
@@ -270,26 +296,26 @@
     opacity: 0.4;
 }
 
-.custom-radio.custom-radio-left [ type="radio" ] + label
+.custom-radio.custom-radio-left [ type = "radio" ] + label
 {
     border-bottom-right-radius: 0 !important;
     border-right: 0 !important;
     border-top-right-radius: 0 !important;
 }
 
-.custom-radio.custom-radio-right [ type="radio" ] + label
+.custom-radio.custom-radio-right [ type = "radio" ] + label
 {
     border-bottom-left-radius: 0 !important;
     border-top-left-radius: 0 !important;
 }
 
-.custom-radio.custom-radio-middle [ type="radio" ] + label
+.custom-radio.custom-radio-middle [ type = "radio" ] + label
 {
     border-radius: 0 !important;
     border-right: 0 !important;
 }
 
-.custom-radio [ type="radio" ] + label
+.custom-radio [ type = "radio" ] + label
 {
     -khtml-user-select: none;
     -moz-user-select: none;
@@ -308,20 +334,20 @@
     user-select: none;
 }
 
-.custom-radio [ type="radio" ]
+.custom-radio [ type = "radio" ]
 {
     left: -9999px;
     position: absolute;
 }
 
-.custom-radio [ type="radio" ]:checked + label
+.custom-radio [ type = "radio" ]:checked + label
 {
     background-color: #4287f5;
     border-color: #4287f5;
     color: #fff;
 }
 
-.custom-radio [ type="radio" ] + label:before
+.custom-radio [ type = "radio" ] + label:before
 {
     background: #fff;
     border: 1px solid #4287f5;
@@ -334,7 +360,7 @@
     width: 12px;
 }
 
-.custom-radio [ type="radio" ] + label:after
+.custom-radio [ type = "radio" ] + label:after
 {
     -webkit-transition: all 0.1s ease;
     background: #005cbf;
@@ -348,14 +374,14 @@
     width: 8px;
 }
 
-.custom-radio [ type="radio" ]:not( :checked ) + label:after
+.custom-radio [ type = "radio" ]:not( :checked ) + label:after
 {
     -webkit-transform: scale( 0 );
     opacity: 0;
     transform: scale( 0 );
 }
 
-.custom-radio [ type="radio" ]:checked + label:after
+.custom-radio [ type = "radio" ]:checked + label:after
 {
     -webkit-transform: scale( 1 );
     opacity: 1;
@@ -441,6 +467,7 @@
     background-color: #1e1e1e;
     border: 1px solid #4287f5;
     border-radius: 2px;
+    box-shadow: 0 4px 8px #000000;
     box-shadow: 0 4px 8px rgba( 0, 0, 0, 0.15 );
     box-sizing: border-box;
     display: none;
@@ -493,7 +520,7 @@
 
 .custom-dropdown > div > a:hover
 {
-    background-color: #1e1e1e;
+    background-color:  #005cbf;
     color: #fff;
 }
 
@@ -509,7 +536,8 @@
     -ms-user-select: none;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
-    background-color: #1e1e1e;
+    color: #fff;
+    background-color: #6F6C6C;
     background-image: none;
     border-radius: 2px;
     font-family: 'Roboto';
@@ -521,7 +549,7 @@
 
 .custom-dialog-flat .ui-dialog-content
 {
-    background-color: #1e1e1e;
+    background-color: #6F6C6C;
     background-image: none;
     padding: 1.6em 1.8em 1.5em 1.8em;
 }
@@ -551,12 +579,12 @@
 
 .custom-dialog-flat .ui-dialog-titlebar
 {
-    background-color: #1e1e1e;
+    background-color: #6F6C6C;
     background-image: none;
     border: 0;
     border-bottom: 1px solid #4287f5;
-    border-radius: 0px;
-    color: #2E2F30;
+    border-radius: 0;
+    color: #fff;
     padding: 1.2em 1.8em 1.2em 1.8em;
 }
 
@@ -570,7 +598,7 @@
 
 .custom-dialog-flat .ui-dialog-titlebar .ui-dialog-titlebar-close
 {
-    background: #1e1e1e none;
+    background: #6F6C6C none;
     border: 0;
     margin: 0;
     padding: 0;
@@ -597,7 +625,7 @@
 
 .custom-dialog-flat .ui-dialog-titlebar .ui-dialog-titlebar-close.ui-state-default
 {
-    background: none;
+    background: #6F6C6C;
     border: none;
     height: auto;
 }
@@ -618,7 +646,7 @@
     border-top: 1px solid #4287f5;
     border-width: 0;
     margin: 0;
-    padding: 0em 1.8em 1.2em 1.8em
+    padding: 0 1.8em 1.2em 1.8em
 }
 
 .custom-dialog-flat .ui-dialog-buttonpane .ui-dialog-buttonset
@@ -636,7 +664,7 @@
 
 .custom-dialog-flat .ui-dialog-buttonpane .ui-dialog-buttonset .ui-button
 {
-    background: #1e1e1e none;
+    background: #6F6C6C none;
     border: 1px solid #4287f5;
     border-radius: 2px;
     color: #fff;
@@ -658,7 +686,7 @@
 
 .custom-dialog-flat .ui-dialog-buttonpane .ui-dialog-buttonset .ui-button.ui-action-button
 {
-    background-color: #4287f5;
+    background-color: #6F6C6C;
     border: 1px solid #4287f5;
 }
 
@@ -682,9 +710,9 @@
 {
     background: #1e1e1e;
     border: 0;
-    border: 1px solid #777;
+    border: 1px solid #4287f5;
     border-radius: 0;
-    color: #222;
+    color: #CACCCE;
     font-family: 'Roboto';
     font-size: 14px;
     font-weight: bold;
@@ -696,7 +724,7 @@
 
 .custom-legend .legend-title:hover
 {
-    background: #1e1e1e;
+    background:  #005cbf;
     color: #fff;
 }
 
