--- a/css/controls.css
+++ b/css/controls.css
@@ -72,7 +72,7 @@
     color: #fff;
     cursor: pointer;
     display: block;
-    font-family: 'Roboto';
+    font-family: 'Roboto', ui-monospace;
     font-size: 14px;
     line-height: 15px;
     outline: none;
@@ -175,7 +175,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    font-family: 'Roboto';
+    font-family: 'Roboto', ui-monospace;
     font-size: 16px;
     justify-content: center;
     line-height: 16px;
@@ -240,7 +240,7 @@ textarea.custom-textbox
     border-radius: 2px;
     box-sizing: border-box;
     color: #fff;
-    font-family: 'Roboto';
+    font-family: 'Roboto', ui-monospace;
     font-size: 12px;
     outline: none;
     padding: 5px 10px;
